# Discord-Bot

./: .gitignore  README.md  _test.js  bot.js  deno.yml  deps.js  flake.nix  logger.js  main.js  meson.build  meson.options  mesonWrapFetch.py  sql.js  test.js
.github/workflows/: deno-lint.yml  deno-tests.yml  deno.yml  deploy.yml  push-deploy.yml  stage.yml
commands/: README.md  quote.js  quote.js~  roll.js
data/: fonts.js  imgs.js
ids/: ids.js
src/: README.md  commands.c  commands.h  logging.c  logging.h  main.c  meson.build  quote.js  roll.js
src/applicationCommands/: README.md  quote-commands.js
src/commands/: README.md  bqn.js  d2.js  define.js  game.js  log.js  mcstatus.js  meson.build  modal.js  peptalk.js  ping.c  ping.js  quote-commands.js  quote.c  roll.js  stupidenglish.js  stupidify.c  tenorify.js
src/commands/moderation/: kick.js
src/commands/userprog/: basecommand.js  commandDB.js
src/lib/: bqn.js  commandEvents.js  commands.js  d2.js  d2_test.js  doubt.js  images.js  renderMeme.js  tenor.js  web.js
src/lib/chess/: _chess.js  chess.js  chess_test.js  expectedboard.txt  win.pgn
src/lib/usercomms/: commandDB.js  createCommand.js  infoCommand.js  listCommand.js  masterAction.js  runCommand.js  sourceSubmit.js  updateCommand.js  usercomm_test.js
src/util/: README.md  ackInteraction.js  collins_define.js  format_definition.js  mcstatusEmbed.js  quote.js  roll.js  rolls.js  stupidenglish.js  urbandict_define.js
src/util/define/: collins.js  freedictionary.js  send_definition.js  urbandict.js
src/util/games/: chess.js
src/util/moderation/: kick.js
src/util/peptalk/: README.md  genPeptalk.js  phase1.txt  phase2.txt  phase3.txt  phase4.txt
src/web/: srv.js
subprojects/: concord.wrap
subprojects/packagefiles/concord/: meson.build
subprojects/packagefiles/concord/core/: meson.build
subprojects/packagefiles/concord/gencodecs/: gencodec_cat.c  meson.build
subprojects/packagefiles/concord/src/: meson.build
