concord_src += files(
  'concord-once.c',
  'discord-refcount.c',
  'discord-rest.c',
  'discord-rest_request.c',
  'discord-rest_ratelimit.c',
  'discord-client.c',
  'discord-events.c',
  'discord-cache.c',
  'discord-loop.c',
  'discord-gateway.c',
  'discord-gateway_dispatch.c',
  'discord-messagecommands.c',
  'discord-timer.c',
  'discord-misc.c',
  'discord-worker.c',
  'application_command.c',
  'auto_moderation.c',
  'interaction.c',
  'audit_log.c',
  'channel.c',
  'emoji.c',
  'gateway.c',
  'guild.c',
  'guild_scheduled_event.c',
  'guild_template.c',
  'invite.c',
  'oauth2.c',
  'user.c',
  'voice.c',
  'webhook.c',
)
